--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://your-github-username.github.io/symbia/"
+baseURL = "https://tonokaki.github.io/symbia/"
 languageCode = "ja"
 title = "Symbia株式会社"
 theme = "ananke"
